--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "career-test-task",
+  "name": "fastrent",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Pasha2407.github.io/career-test-task/",
+  "homepage": "https://Pasha2407.github.io/fastrent/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
