--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "normalize.css": "^8.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.0",
     "redux-persist": "^6.0.0",
     "web-vitals": "^2.1.3"
   },
